fixing more heroku issues

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "tirpok",
   "version": "0.1.0",
+  "engines": {
+    "node": "14.15.0"
+  },
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.4.1",
