--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "start": "node server.js",
     "develop": "craco start",
     "build": "craco build",
     "test": "craco test",
